--- a/day-story-web/package.json
+++ b/day-story-web/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.2",
+    "sass-loader": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
