Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,32 +33,12 @@ steps:
 #     sonar-scanner.bat -D"sonar.projectKey=MenuMaster-FrontEnd--T3-" -D"sonar.sources=." -D"sonar.host.url=http://localhost:9000" -D"sonar.token=sqa_302c8afa9b9b6410b5de145de201da1cd9ed75ba"
 #   displayName: 'SonarQube'
 
-- task: SSH@0
-  inputs:
-    sshEndpoint: 'mobven-ssh'
-    runOptions: 'commands'
-    commands: |
-      systemctl stop apache2
-
-    readyTimeout: '20000'
-  displayName: 'Service-Stop'
-
 
 - task: CopyFilesOverSSH@0
   inputs:
     sshEndpoint: 'mobven-ssh'
-    sourceFolder: '$(Pipeline.Workspace)/s/build'
+    sourceFolder: '$(Pipeline.Workspace)/s/dist'
     contents: '**'
     targetFolder: '/var/www/DayStory/html'
     readyTimeout: '20000'
   displayName: 'CopyFilesOverSSH'
-  
-- task: SSH@0
-  inputs:
-    sshEndpoint: 'mobven-ssh'
-    runOptions: 'commands'
-    commands: |
-      systemctl start apache2
-
-    readyTimeout: '20000'
-  displayName: 'Service-Start'
