--- a/day-story-web/package.json
+++ b/day-story-web/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.11.5",
     "@material/web": "^1.4.1",
     "@mui/material": "^5.15.18",
+    "@mui/x-date-pickers": "^7.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
