--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
     "web-vitals": "^2.1.4"
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
