--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@material/web": "^1.4.1",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^7.5.1",
     "@testing-library/jest-dom": "^5.17.0",
